Add images. Fix the size of Icons.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,6 +41,11 @@ h3 {
   font-size: var(--heading3);
 }
 
+/* next/image */
+span > img{
+  transition: 0.2s;
+}
+
  /* リセット */ 
  body, h1, h2, h3, P, figure, ul {
   margin: 0;
@@ -54,3 +59,4 @@ h3 {
   color: inherit;
   text-decoration: none;
   }
+
