--- a/styles/accordion.module.css
+++ b/styles/accordion.module.css
@@ -34,13 +34,36 @@
 .text {
     overflow: hidden;
     height: 0px;
-    transition: height 0.5s;
+    transition: none;
 }
 
 .open .text {
-    height: var(--text-height);
+    animation: openAnim 0.5s forwards;
 }
 
+.close .text {
+    animation: closeAnim 0.5s forwards;
+}
+
+@keyframes openAnim {
+    0% {
+        height: 0px;
+    }
+    99% {
+      height: var(--text-height);
+    }
+    100% {
+        height: auto;
+    }
+}
+@keyframes closeAnim {
+    0% {
+        height: var(--text-height);
+    }
+    100% {
+        height: 0px;
+    }
+}
 .textInner {
     padding: 0 1.14em 1.14em;
     font-size: calc(var(--body) * 0.875);
