--- a/styles/information.module.css
+++ b/styles/information.module.css
@@ -1,40 +1,66 @@
-.stack > * + * {
+.stack>*+* {
     margin-top: var(--stack-space, 0em);
 }
 
-.buttonlink a {
-    background: #eee;
-    position: relative;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin: 0 auto;
-    max-width: 240px;
-    padding: 10px 25px;
-    color: #313131;
-    transition: 0.3s ease-in-out;
-    font-weight: 500;
-    z-index:0;
-    border-left: solid 5px #6bb6ff;
+/* デスクトップ用ボタン */
+@media (min-width: 767px) {
+    .buttonlink a {
+        background: #eee;
+        position: relative;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        margin: 0 auto;
+        max-width: 240px;
+        padding: 10px 25px;
+        color: #313131;
+        transition: 0.3s ease-in-out;
+        font-weight: 500;
+        z-index: 0;
+        border-left: solid 5px #6bb6ff;
+    }
+
+    .buttonlink a:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 0;
+        display: block;
+        background: #6bb6ff;
+        transition: .3s;
+        left: 0;
+    }
+
+    .buttonlink a:hover {
+        color: #FFF;
+    }
+
+    .buttonlink a:hover:before {
+        width: 100%;
+        z-index: -1;
+    }
 }
-.buttonlink a:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 0;
-    display: block;
-    background: #6bb6ff;
-    transition: .3s;
-    left:0;
+
+/* モバイル用 ボタン*/
+@media (max-width: 767px) {
+    .buttonlink {
+        border-radius: 3px;
+        border: none;
+        position: relative;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        margin: 0 auto;
+        max-width: 220px;
+        padding: 10px 25px;
+        color: #FFF;
+        transition: 0.3s ease-in-out;
+        font-weight: 600;
+        background: #6bb6ff;
+    }
 }
-.buttonlink a:hover {
-    color: #FFF;
-}
-.buttonlink a:hover:before {
-    width: 100%;
-    z-index: -1;
-}
+
 
 
 /* .buttonlink {
