--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -2,8 +2,12 @@
   padding: var(--space-xl) 0;
   background-color: var(--gray-10);
 }
-    
+
 .flexContainer {
   composes: sideBySideCenter from 'styles/utils.module.css';
   gap: 2em;
-}    
+}
+
+.footerCopy {
+  margin-left: auto;
+}
