--- a/styles/hero.module.css
+++ b/styles/hero.module.css
@@ -1,24 +1,27 @@
-.flexContainer {
-  composes: sideBySideCenter from 'styles/utils.module.css';
+.text {
+  text-align: center;
 }
 
-.text {
-    padding-top: calc(var(--display) * 0.5);
-    padding-bottom: calc(var(--display) * 0.7);
+.title {
+  font-size: var(--display);
+  font-weight: 900;
+  letter-spacing: 0.15em;
+  color: rgba(9, 17, 67, 0.241);
+  z-index: 5;
+  padding-bottom: 0px;
 }
-  .title {
-    font-size: var(--display);
-    font-weight: 900;
-    letter-spacing: 0.15em;
-    color: rgba(9, 17, 67, 0.241);
+
+.subtitle {
+  padding-bottom: 5em;
+  font-size: var(--small-heading2);
+  z-index: 3;
 }
-  .subtitle {
-    font-size: var(--small-heading2);
-}
+
 /* image */
 .image {
   width: 100%;
 }
+
 
 @media (min-width: 768px) {
   .image {
